--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="tecnologico.html"><div class="card3 tec"><strong>Tecnológico</strong></div></a>
         </div>
         </div>
-        <!-- <div class="destaque">
+        <div class="destaque">
             <h1 class="titulododestaque">DESTAQUE</h1>
             <p class="aviaodestaque">Sukhoi Su-57 Felon</p>
             <div class="alinha">
@@ -38,7 +38,7 @@
                 <p class="text">É um caça de quinta geração desenvolvido pela fabricante russa Sukhoi. Ele foi projetado para atender às necessidades da Força Aérea Russa e se destaca como o primeiro caça stealth totalmente desenvolvido pela Rússia. O Su-57 possui um design de fuselagem com características de furtividade, incluindo linhas anguladas e revestimentos absorventes de radar, que ajudam a reduzir sua assinatura radar. Ele também é equipado com um radar AESA de última geração e um sistema de sensores multifuncionais que proporcionam uma visão de 360 graus do campo de batalha, garantindo uma excelente consciência situacional. Esses sensores permitem ao Su-57 detectar e rastrear alvos a longas distâncias e operar eficazmente em ambientes de guerra eletrônica, onde sistemas de defesa inimigos tentam interferir em suas comunicações e navegação.</p>
                 <a class="saibamais" href="tecnologicotres.html">Saiba Mais...</a>
             </div>
-        </div> -->
+            </div>
         </div>
         </div>
     </section>
